<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/d_20"
        android:layout_above="@+id/seek"
        android:text="@string/n_5"
        style="@style/st_dark_12"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/d_20"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/d_20"
        android:layout_above="@+id/seek"
        android:text="@string/n_15"
        style="@style/st_dark_12"/>

    <com.dpcsa.compon.custom_components.SeekBarRange
        android:id="@+id/seek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/select"
        android:layout_marginLeft="@dimen/d_20"
        android:layout_marginRight="@dimen/d_20"
        android:layout_marginBottom="44dp"
        app:thumbImg="@drawable/slider_pin"
        app:betweenColor="@color/primary"
        app:barHeight="12dp"
        app:barDrawable="@drawable/rec_between"
        app:minValueSeek="5"
        app:maxValueSeek="15"
        app:minStartValue="7"
        app:maxStartValue="9"
        app:showMinMaxValue="@id/night"
        app:sliderViewInfo="@id/inf" />

    <TextView
        android:id="@+id/inf"
        style="@style/st_txt_22"
        android:layout_width="80dp"
        android:layout_height="106dp"
        android:layout_above="@+id/select"
        android:layout_marginBottom="42dp"
        android:background="@drawable/slider_pin_pressed"
        android:gravity="center_horizontal"
        android:paddingTop="24dp" />

    <TextView
        android:id="@+id/select"
        style="@style/st_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_button"
        android:layout_above="@+id/gr1"
        android:layout_marginBottom="60dp"
        android:text="@string/select" />

    <LinearLayout
        android:id="@+id/gr1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/gr2"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:orientation="horizontal"
        android:layout_marginBottom="6dp">
        <TextView
            android:id="@+id/n_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:text="@string/n_5"
            android:background="@drawable/rect_prim_20"
            style="@style/st_prim_14"/>
        <TextView
            android:id="@+id/n_7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:gravity="center"
            android:text="@string/n_7"
            android:background="@drawable/rect_prim_20"
            style="@style/st_prim_14"/>
        <TextView
            android:id="@+id/n_9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:gravity="center"
            android:text="@string/n_9"
            android:background="@drawable/rect_prim_20"
            style="@style/st_prim_14"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gr2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp">
        <TextView
            android:id="@+id/n_11"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:text="@string/n_11"
            android:background="@drawable/rect_prim_20"
            style="@style/st_prim_14"/>
        <TextView
            android:id="@+id/n_14"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:gravity="center"
            android:text="@string/n_14"
            android:background="@drawable/rect_prim_20"
            style="@style/st_prim_14"/>
        <TextView
            android:id="@+id/n_21"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:gravity="center"
            android:text="@string/n_21"
            android:background="@drawable/rect_blac_20"
            android:textSize="14sp"
            android:lineSpacingExtra="4sp"
            android:textColor="@color/black_20"/>
    </LinearLayout>
</RelativeLayout>