<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/primary">
        <LinearLayout
            android:id="@+id/marsh"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:id="@+id/from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:lineSpacingExtra="6sp"
                android:text="@string/who_flying"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/back"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:orientation="vertical"
            android:layout_marginTop="28dp"
            android:gravity="center">
            <ImageView
                android:layout_width="@dimen/h_icon"
                android:layout_height="@dimen/h_icon"
                android:src="@drawable/close"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ok"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:layout_width="@dimen/h_icon"
                android:layout_height="@dimen/h_icon"
                android:src="@drawable/ok" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/who_flying"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal"
        android:layout_below="@+id/tool"
        android:gravity="center">
        <com.dpcsa.compon.custom_components.TextViewNumberGrammar
            android:id="@+id/adults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:stringArray="@array/adults_arr"
            style="@style/st_txt_22"/>

        <com.dpcsa.compon.custom_components.TextViewNumberGrammar
            android:id="@+id/kids"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:stringArray="@array/kinds_arr"
            app:prefix=", "
            app:zeroNotView="true"
            style="@style/st_txt_22"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/pan1"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_below="@+id/who_flying">

        <TextView
            style="@style/st_14_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/d_20"
            android:text="@string/adults" />

        <LinearLayout
            android:id="@+id/minus"
            android:layout_width="@dimen/d_40"
            android:layout_height="@dimen/d_40"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/amount"
            android:background="@drawable/oval"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/d_16"
                android:layout_height="@dimen/d_16"
                android:src="@drawable/minus" />
        </LinearLayout>

        <com.dpcsa.compon.custom_components.PlusMinus
            android:id="@+id/amount"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            style="@style/st_txt_22"
            android:inputType="number"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/plus"
            android:gravity="center"
            app:minValue="1"
            app:maxValue="3"
            app:minusViewId="@id/minus"
            app:plusViewId="@id/plus"
            app:viewMirror="@id/adults"
            app:noEdit="true"/>

        <LinearLayout
            android:id="@+id/plus"
            android:layout_width="@dimen/d_40"
            android:layout_height="@dimen/d_40"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/d_20"
            android:background="@drawable/oval"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/d_16"
                android:layout_height="@dimen/d_16"
                android:src="@drawable/plus"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:background="@color/primary_20"
            android:layout_marginLeft="@dimen/d_20"
            android:layout_marginRight="@dimen/d_20"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/primary_20"
            android:layout_marginLeft="@dimen/d_20"
            android:layout_marginRight="@dimen/d_20"/>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pan1"/>

    <RelativeLayout
        android:id="@+id/add_kid"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_below="@+id/recycler">

        <ImageView
            android:id="@+id/img"
            android:layout_width="@dimen/d_24"
            android:layout_height="@dimen/d_24"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/d_20"
            android:src="@drawable/child" />

        <TextView
            style="@style/st_prim_14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/img"
            android:layout_marginLeft="@dimen/d_8"
            android:text="@string/add_kid" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/primary_20"
            android:layout_marginLeft="@dimen/d_20"
            android:layout_marginRight="@dimen/d_20"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/kid_age"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@+id/recycler"
        android:background="@color/white"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <TextView
                style="@style/st_txt_12_40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/d_20"
                android:text="@string/indicate_age" />

            <TextView
                style="@style/st_prim_12_40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/d_20"
                android:text="@string/cancel" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/d_20"
            android:layout_marginTop="@dimen/d_20"
            android:layout_marginRight="@dimen/d_20"
            android:background="@color/primary_20" />

        <com.dpcsa.compon.custom_components.TagsView
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cancel"
            android:layout_marginLeft="@dimen/d_20"
            android:layout_marginRight="@dimen/d_20" />
    </RelativeLayout>

    <TextView
        android:id="@+id/select"
        style="@style/st_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_button"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/select" />
</RelativeLayout>